# bazel-toolchain-test

./: .bazelrc  BUILD  MODULE.bazel  README.md  defs.bzl
with_cfg/private/: BUILD.bazel  rule_defaults.bzl
