bazel_dep(name = "hermetic_cc_toolchain", version = "3.1.0")

#bazel_dep(name = "with_cfg.bzl", version = "0.13.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "bazel_features", version = "1.30.0")
bazel_dep(name = "rules_cc", version = "0.1.1")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//...",
)
