bazel_dep(name = "hermetic_cc_toolchain", version = "3.1.0")
bazel_dep(name = "with_cfg.bzl", version = "0.13.0")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//...",
)

inject_repo("with_cfg.bzl", "zig_sdk")
